refactor project section layout; implement horizontal scrolling and enhance project card styles for improved usability

--- a/index.html
+++ b/index.html
@@ -434,48 +434,90 @@
           </nav>
         </div>
 
-        <div class="projects-grid">
-          <!-- ML Project -->
-          <div class="project-card" data-category="ml">
-            <div class="project-image">
-              <img src="assets/projects/ml-project.jpg" alt="ML Project">
-              <div class="project-links">
-                <a href="#" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="#" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+        <div class="projects-container">
+          <button class="scroll-arrow scroll-left" title="Scroll Left">
+            <i class="fas fa-chevron-left"></i>
+          </button>
+          <div class="projects-grid">
+            <!-- ML Project -->
+            <div class="project-card" data-category="ml">
+              <div class="project-image">
+                <img src="assets/projects/ml-project.jpg" alt="ML Project">
+                <div class="project-links">
+                  <a href="#" class="project-link" target="_blank" title="GitHub Repository"><i class="fab fa-github"></i></a>
+                  <a href="#" class="project-link" target="_blank" title="External Link"><i class="fas fa-external-link-alt"></i></a>
+                </div>
+              </div>
+              <div class="project-content">
+                <h3>Machine Learning Project</h3>
+                <p>A sophisticated machine learning model for predictive analytics using Python and TensorFlow.</p>
+                <div class="project-tech">
+                  <span>Python</span>
+                  <span>TensorFlow</span>
+                  <span>Scikit-learn</span>
+                </div>
               </div>
             </div>
-            <div class="project-content">
-              <h3>Machine Learning Project</h3>
-              <p>A sophisticated machine learning model for predictive analytics using Python and TensorFlow.</p>
-              <div class="project-tech">
-                <span>Python</span>
-                <span>TensorFlow</span>
-                <span>Scikit-learn</span>
+
+            <!-- Web Project -->
+            <div class="project-card" data-category="web">
+              <div class="project-image">
+                <img src="assets/projects/web-project.jpg" alt="Web Project">
+                <div class="project-links">
+                  <a href="#" class="project-link" target="_blank" title="GitHub Repository"><i class="fab fa-github"></i></a>
+                  <a href="#" class="project-link" target="_blank" title="External Link"><i class="fas fa-external-link-alt"></i></a>
+                </div>
+              </div>
+              <div class="project-content">
+                <h3>Web Development Project</h3>
+                <p>A responsive web application built with modern technologies and best practices.</p>
+                <div class="project-tech">
+                  <span>React</span>
+                  <span>Node.js</span>
+                  <span>MongoDB</span>
+                </div>
+              </div>
+            </div>
+            <div class="project-card" data-category="web">
+              <div class="project-image">
+                <img src="assets/projects/web-project.jpg" alt="Web Project">
+                <div class="project-links">
+                  <a href="#" class="project-link" target="_blank" title="GitHub Repository"><i class="fab fa-github"></i></a>
+                  <a href="#" class="project-link" target="_blank" title="External Link"><i class="fas fa-external-link-alt"></i></a>
+                </div>
+              </div>
+              <div class="project-content">
+                <h3>Web Development Project</h3>
+                <p>A responsive web application built with modern technologies and best practices.</p>
+                <div class="project-tech">
+                  <span>React</span>
+                  <span>Node.js</span>
+                  <span>MongoDB</span>
+                </div>
+              </div>
+            </div>
+            <div class="project-card" data-category="web">
+              <div class="project-image">
+                <img src="assets/projects/web-project.jpg" alt="Web Project">
+                <div class="project-links">
+                  <a href="#" class="project-link" target="_blank" title="GitHub Repository"><i class="fab fa-github"></i></a>
+                  <a href="#" class="project-link" target="_blank" title="External Link"><i class="fas fa-external-link-alt"></i></a>
+                </div>
+              </div>
+              <div class="project-content">
+                <h3>Web Development Project</h3>
+                <p>A responsive web application built with modern technologies and best practices.</p>
+                <div class="project-tech">
+                  <span>React</span>
+                  <span>Node.js</span>
+                  <span>MongoDB</span>
+                </div>
               </div>
             </div>
           </div>
-
-          <!-- Web Project -->
-          <div class="project-card" data-category="web">
-            <div class="project-image">
-              <img src="assets/projects/web-project.jpg" alt="Web Project">
-              <div class="project-links">
-                <a href="#" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="#" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
-              </div>
-            </div>
-            <div class="project-content">
-              <h3>Web Development Project</h3>
-              <p>A responsive web application built with modern technologies and best practices.</p>
-              <div class="project-tech">
-                <span>React</span>
-                <span>Node.js</span>
-                <span>MongoDB</span>
-              </div>
-            </div>
-          </div>
-
-          <!-- Add more project cards as needed -->
+          <button class="scroll-arrow scroll-right" title="Scroll Right">
+            <i class="fas fa-chevron-right"></i>
+          </button>
         </div>
       </section>
 
