add mobile navigation; implement smooth scrolling and active section highlighting for improved user experience

--- a/index.html
+++ b/index.html
@@ -94,6 +94,30 @@
       </nav>
     </header>
 
+    <!-- Add bottom navigation for mobile -->
+    <nav class="mobile-nav">
+        <a href="#home" class="active">
+            <i class="fas fa-home"></i>
+            <span>Home</span>
+        </a>
+        <a href="#about-me">
+            <i class="fas fa-user"></i>
+            <span>About</span>
+        </a>
+        <a href="#tech-skills">
+            <i class="fas fa-code"></i>
+            <span>Skills</span>
+        </a>
+        <a href="#projects">
+            <i class="fas fa-project-diagram"></i>
+            <span>Projects</span>
+        </a>
+        <a href="#connect-me">
+            <i class="fas fa-envelope"></i>
+            <span>Contact</span>
+        </a>
+    </nav>
+
     <main>
       <section id="home" class="home">
         <div class="floating-shapes">
