add mobile project modal; implement functionality for displaying project details and images in a modal on mobile devices

--- a/index.html
+++ b/index.html
@@ -988,5 +988,35 @@
         </div> -->
       </section>
     </main>
+    <!-- Mobile Project Modal -->
+    <div class="mobile-project-modal">
+      <div class="modal-header">
+        <h3 class="modal-title"></h3>
+        <button class="close-modal">
+          <i class="fas fa-times"></i>
+        </button>
+      </div>
+      <div class="modal-content">
+        <div class="project-link">
+          <a href="#" target="_blank" rel="noopener noreferrer">
+            <i class="fas fa-external-link-alt"></i>
+            <span>View Project</span>
+          </a>
+        </div>
+        <div class="project-images-carousel">
+          <div class="carousel-container"></div>
+          <div class="carousel-nav">
+            <button class="carousel-prev">
+              <i class="fas fa-chevron-left"></i>
+            </button>
+            <button class="carousel-next">
+              <i class="fas fa-chevron-right"></i>
+            </button>
+          </div>
+        </div>
+        <p class="modal-description"></p>
+        <div class="modal-tech-stack"></div>
+      </div>
+    </div>
   </body>
 </html>
