refactor mobile navigation; improve active section update logic and enhance smooth scrolling functionality

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <a href="#connect-me">Connect</a>
         </div>
         <a
-          href="assets/resume/general_resume_shubh.pdf"
+          href="assets/resume/Shubh_Gupta_SDE_Resume.pdf"
           class="header-resume-btn"
           download
         >
@@ -95,28 +95,28 @@
     </header>
 
     <!-- Add bottom navigation for mobile -->
-    <nav class="mobile-nav">
-        <a href="#home" class="active">
-            <i class="fas fa-home"></i>
-            <span>Home</span>
-        </a>
-        <a href="#about-me">
-            <i class="fas fa-user"></i>
-            <span>About</span>
-        </a>
-        <a href="#tech-skills">
-            <i class="fas fa-code"></i>
-            <span>Skills</span>
-        </a>
-        <a href="#projects">
-            <i class="fas fa-project-diagram"></i>
-            <span>Projects</span>
-        </a>
-        <a href="#connect-me">
-            <i class="fas fa-envelope"></i>
-            <span>Contact</span>
-        </a>
-    </nav>
+      <!-- <nav class="mobile-nav">
+          <a href="#home" class="active">
+              <i class="fas fa-home"></i>
+              <span>Home</span>
+          </a>
+          <a href="#about-me">
+              <i class="fas fa-user"></i>
+              <span>About</span>
+          </a>
+          <a href="#tech-skills">
+              <i class="fas fa-code"></i>
+              <span>Skills</span>
+          </a>
+          <a href="#research">
+              <i class="fas fa-book"></i>
+              <span>Research</span>
+          </a>
+          <a href="#connect-me">
+              <i class="fas fa-envelope"></i>
+              <span>Contact</span>
+          </a>
+      </nav> -->
 
     <main>
       <section id="home" class="home">
@@ -200,7 +200,7 @@
             and mentor aspiring developers.
           </p>
           <a
-            href="assets/resume/general_resume_shubh.pdf"
+            href="assets/resume/Shubh_Gupta_SDE_Resume.pdf"
             class="resume-btn"
             download
           >
@@ -446,198 +446,11 @@
       </section>
       <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-      <section id="projects">
-  <div class="projects-header">
-    <h2>Featured Projects</h2>
-    <nav class="project-filter">
-      <button class="filter-btn active" data-filter="all">
-        <i class="fas fa-th-large"></i> All
-      </button>
-      <button class="filter-btn" data-filter="ml">
-        <i class="fas fa-brain"></i> Machine Learning
-      </button>
-      <button class="filter-btn" data-filter="web">
-        <i class="fas fa-code"></i> Web Development
-      </button>
-      <button class="filter-btn" data-filter="other">
-        <i class="fas fa-cube"></i> Other
-      </button>
-    </nav>
-  </div>
-
-  <div class="projects-container">
-  <button class="scroll-arrow scroll-left" aria-label="Scroll Left">
-    <i class="fas fa-chevron-left"></i>
-  </button>
-  
-  <div class="projects-grid">
-    <div class="project-card" data-category="ml">
-      <div class="project-image">
-        <img src="assets/projects/ai-project.jpg" alt="AI Project" loading="lazy">
-        <div class="project-overlay">
-          <div class="project-quick-info">
-            <span class="project-status active">Active</span>
-            <h4>Machine Learning</h4>
-          </div>
-        </div>
-      </div>
-      <div class="project-content">
-        <h3>AI Image Recognition</h3>
-        <p>Advanced image recognition system using deep learning for real-time object detection and classification.</p>
-        <div class="project-tech-stack">
-          <span>Python</span>
-          <span>TensorFlow</span>
-          <span>OpenCV</span>
-          <span>Keras</span>
-        </div>
-        <div class="project-links">
-          <a href="https://github.com/username/project" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-github"></i>
-            <span>Source Code</span>
-          </a>
-          <a href="https://demo.project.com" target="_blank" rel="noopener noreferrer">
-            <i class="fas fa-external-link-alt"></i>
-            <span>Live Demo</span>
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <div class="project-card" data-category="ml">
-      <div class="project-image">
-        <img src="assets/projects/ai-project.jpg" alt="AI Project" loading="lazy">
-        <div class="project-overlay">
-          <div class="project-quick-info">
-            <span class="project-status active">Active</span>
-            <h4>Machine Learning</h4>
-          </div>
-        </div>
-      </div>
-      <div class="project-content">
-        <h3>AI Image Recognition</h3>
-        <p>Advanced image recognition system using deep learning for real-time object detection and classification.</p>
-        <div class="project-tech-stack">
-          <span>Python</span>
-          <span>TensorFlow</span>
-          <span>OpenCV</span>
-          <span>Keras</span>
-        </div>
-        <div class="project-links">
-          <a href="https://github.com/username/project" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-github"></i>
-            <span>Source Code</span>
-          </a>
-          <a href="https://demo.project.com" target="_blank" rel="noopener noreferrer">
-            <i class="fas fa-external-link-alt"></i>
-            <span>Live Demo</span>
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <div class="project-card" data-category="ml">
-      <div class="project-image">
-        <img src="assets/projects/ai-project.jpg" alt="AI Project" loading="lazy">
-        <div class="project-overlay">
-          <div class="project-quick-info">
-            <span class="project-status active">Active</span>
-            <h4>Machine Learning</h4>
-          </div>
-        </div>
-      </div>
-      <div class="project-content">
-        <h3>AI Image Recognition</h3>
-        <p>Advanced image recognition system using deep learning for real-time object detection and classification.</p>
-        <div class="project-tech-stack">
-          <span>Python</span>
-          <span>TensorFlow</span>
-          <span>OpenCV</span>
-          <span>Keras</span>
-        </div>
-        <div class="project-links">
-          <a href="https://github.com/username/project" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-github"></i>
-            <span>Source Code</span>
-          </a>
-          <a href="https://demo.project.com" target="_blank" rel="noopener noreferrer">
-            <i class="fas fa-external-link-alt"></i>
-            <span>Live Demo</span>
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <div class="project-card" data-category="ml">
-      <div class="project-image">
-        <img src="assets/projects/ai-project.jpg" alt="AI Project" loading="lazy">
-        <div class="project-overlay">
-          <div class="project-quick-info">
-            <span class="project-status active">Active</span>
-            <h4>Machine Learning</h4>
-          </div>
-        </div>
-      </div>
-      <div class="project-content">
-        <h3>AI Image Recognition</h3>
-        <p>Advanced image recognition system using deep learning for real-time object detection and classification.</p>
-        <div class="project-tech-stack">
-          <span>Python</span>
-          <span>TensorFlow</span>
-          <span>OpenCV</span>
-          <span>Keras</span>
-        </div>
-        <div class="project-links">
-          <a href="https://github.com/username/project" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-github"></i>
-            <span>Source Code</span>
-          </a>
-          <a href="https://demo.project.com" target="_blank" rel="noopener noreferrer">
-            <i class="fas fa-external-link-alt"></i>
-            <span>Live Demo</span>
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <div class="project-card" data-category="web">
-      <div class="project-image">
-        <img src="assets/projects/web-project.jpg" alt="Web Project" loading="lazy">
-        <div class="project-overlay">
-          <div class="project-quick-info">
-            <span class="project-status completed">Completed</span>
-            <h4>Web Development</h4>
-          </div>
-        </div>
-      </div>
-      <div class="project-content">
-        <h3>E-Commerce Platform</h3>
-        <p>Full-stack e-commerce solution with real-time inventory management and payment processing.</p>
-        <div class="project-tech-stack">
-          <span>React</span>
-          <span>Node.js</span>
-          <span>MongoDB</span>
-          <span>Stripe</span>
-        </div>
-        <div class="project-links">
-          <a href="https://github.com/username/project" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-github"></i>
-            <span>Source Code</span>
-          </a>
-          <a href="https://demo.project.com" target="_blank" rel="noopener noreferrer">
-            <i class="fas fa-external-link-alt"></i>
-            <span>Live Demo</span>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-  <button class="scroll-arrow scroll-right" aria-label="Scroll Right">
-    <i class="fas fa-chevron-right"></i>
-  </button>
-</div>
-
+      <!-- Commenting out Projects Section for now
+<section id="projects">
+  // ... entire projects section code ...
 </section>
+-->
 
       <section id="research">
         <div class="research-header">
@@ -919,13 +732,13 @@
           <!-- Add more certificates following the same structure -->
         </div>
 
-        <div class="certificates-loader">
+        <!-- <div class="certificates-loader">
           <button class="load-more">
             Load More
             <i class="fas fa-chevron-down"></i>
           </button>
         </div>
-      </section>
+      </section> -->
 
       <section id="connect-me" class="connect-me">
         <div class="connect-header">
