--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./src/assets/img/shubhimage6" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="%BASE_URL%assets/images/shubhImage6.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shubh's Portfolio</title>
   </head>
