--- a/public/404.html
+++ b/public/404.html
@@ -118,6 +118,6 @@
     <div class="loader"></div>
     <h1>Page Not Found</h1>
     <p>Redirecting you back to the homepage...</p>
-    <a href="/Portfolio/" class="redirect-btn">Go to Homepage</a>
+    <a href="/" class="redirect-btn">Go to Homepage</a>
   </body>
 </html>
